@@ -20,29 +20,22 @@ else:
    print "Warning: hepnames LaTeX package not found!"
 
 
-## Imports
-from diagrams import *
-from utils import *
-from points import *
-from blobs import *
-from lines import *
-from deco import *
-
-
 ## Set __all__ (for "import * from pyfeyn")
-__all__ = ["FeynDiagram", "Point", "Vertex", "DecoratedPoint",
-           "Blob", "Circle", "Ellipse",
-           "Line", "DecoratedLine", "Photon", "Gluon", "Fermion", "NamedLine",
-           "Arrow", "Label"]
+__all__ = ["diagrams", "points", "blobs", "lines", "deco", "utils"]
 
-
+#__all__ = ["FeynDiagram",
+#           "Point", "Vertex", "DecoratedPoint",
+#           "Blob", "Circle", "Ellipse",
+#           "Line", "DecoratedLine", "Photon", "Gluon", "Fermion", "NamedLine",
+#           "Arrow", "Label"]
 
 
 ## Option parsing
 from optparse import OptionParser 
-parser = OptionParser()
-parser.add_option("-V", "--visual-debug", dest="VDEBUG", action = "store_true", default = False,
-                  help="produce visual debug output")
-parser.add_option("-D", "--debug", dest="DEBUG", action = "store_true", default = False,
-                  help="produce debug output")
-(FeynDiagram.options, args) = parser.parse_args()
+_parser = OptionParser()
+_parser.add_option("-V", "--visual-debug", dest="VDEBUG", action = "store_true", default = False,
+                   help="produce visual debug output")
+_parser.add_option("-D", "--debug", dest="DEBUG", action = "store_true", default = False,
+                   help="produce debug output")
+from diagrams import FeynDiagram
+(FeynDiagram.options, args) = _parser.parse_args()
