@@ -1,0 +1,8 @@
+"""Convenience imports to make things easier for typical users."""
+
+from diagrams import *
+from points import *
+from lines import *
+from blobs import *
+#from deco import *
+#from utils import *
